# brc-solver

./: .gitignore  FiniteSet.hs  Idea.txt  LICENSE  README.txt  SetOf.hs  SetOfProps.hs  Tests.hs  brc-solver.cabal
BRC/: BinRel.hs  Constraint.hs  FiniteSet.hs  SetOf.hs  Size.hs  Solver.hs
BRC/Solver/: Assignments.hs  Error.hs  Influence.hs  Monad.hs  Options.hs  State.hs  Util.hs  VariablesIn.hs  ZeroOneTwo.hs
smallints/: ConstraintParser.hs  Makefile  SmallInt.hs  SmallIntConstraints.hs  ex1.txt  ex2.txt  ex3.txt  ex4.txt  ex5.txt  ex6.txt  smallints.hs
tests/: AssignmentTests.hs  SetOfProps.hs  SetOfTests.hs  SizeTests.hs  Variable.hs  ZeroOneTwoProps.hs  ZeroOneTwoTests.hs  runtests.hs
